add CORS options, add Name (operation id) for API methods, refactor styles structure, query and display available columns configuration, bind available aggregations to enum values
